# zed-ros2-wrapper

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  Dockerfile.l4t  LICENSE  README.md  gitlab-ci.yml  last_changes.md
.ci/: build_foxy_bin.sh  build_humble_bin.sh  build_humble_src.sh  build_in_humble.sh  download_and_install_sdk.sh  jetson_build_humble_src.sh  jetson_download_and_install_sdk.sh  run_build_in_foxy.sh  run_build_in_humble.sh  run_tests.sh  test_ipc_zero_copy.sh
.devcontainer/: devcontainer.json
docker/: Dockerfile  Dockerfile.desktop-humble  Dockerfile.l4t-devel  Dockerfile.l4t-humble  Dockerfile.l4t-humble-release  Dockerfile.l4t-release  Dockerfile.l4t35_1-humble-devel  (+16 more)
examples/multi_camera/: CMakeLists.txt  README.md  package.xml
examples/multi_camera/config/: zed.yaml  zedm.yaml
examples/multi_camera/launch/: zed_multi_camera.launch.py
examples/multi_camera/rviz/: rviz_multi_camera.rviz
examples/multi_camera/urdf/: zed.urdf  zedm.urdf
test/zed_odom_tf_test/: CMakeLists.txt  package.xml
test/zed_odom_tf_test/src/: zed_odom_tf_test.cpp
tutorials/zed_lifecycle_tutorial/: CMakeLists.txt  README.md  package.xml
tutorials/zed_lifecycle_tutorial/src/: zed_lifecycle_sub_tutorial.cpp
tutorials/zed_video_tutorial/: CMakeLists.txt  README.md  package.xml
tutorials/zed_video_tutorial/src/: zed_video_sub_tutorial.cpp
zed-opencv-calibration/stereo_calibration/: CMakeLists.txt
zed-opencv-calibration/stereo_calibration/include/: calibration_checker.hpp  opencv_calibration.hpp
zed-opencv-calibration/stereo_calibration/src/: calibration_checker.cpp  main.cpp  opencv_calibration.cpp
zed-ros2-interfaces/: CMakeLists.txt  README.md  package.xml
zed-ros2-interfaces/msg/: DepthInfoStamped.msg  Heartbeat.msg  Object.msg  PlaneStamped.msg  PosTrackStatus.msg  Skeleton2D.msg  Skeleton3D.msg
zed-ros2-interfaces/srv/: SetPose.srv  SetROI.srv  StartSvoRec.srv
zed_components/: CMakeLists.txt  package.xml
zed_components/src/include/: sl_version.hpp  visibility_control.h  visibility_control.hpp
zed_components/src/tools/include/: gnss_replay.hpp  json.hpp  sl_logging.hpp  sl_tools.h  sl_tools.hpp  sl_type_adapter.hpp  sl_types.hpp  sl_win_avg.hpp
zed_components/src/tools/src/: gnss_replay.cpp  sl_tools.cpp  sl_types.cpp  sl_win_avg.cpp
zed_components/src/zed_camera/include/: cost_traversability.hpp  detector.h  sl_types.hpp  utils.h  zed_camera_component.hpp  zed_camera_one_component.hpp
zed_components/src/zed_camera/src/: cost_traversability.cpp  detector.cpp  utils.cpp  yolo.cpp  zed_camera_component.cpp  zed_camera_component_bodytrk.cpp  zed_camera_component_main.cpp  zed_camera_component_objdet.cpp  zed_camera_component_video_depth.cpp  zed_camera_one_component.cpp  zed_camera_one_component_main.cpp  zed_camera_one_component_sensors.cpp  zed_camera_one_component_video.cpp
zed_components/src/zed_camera_one/include/: zed_camera_one_component.hpp
zed_components/src/zed_camera_one/src/: zed_camera_one_component_main.cpp  zed_camera_one_component_sensors.cpp  zed_camera_one_component_video.cpp
zed_debug/: CMakeLists.txt  README.md  package.xml
zed_debug/config/: common_mono.yaml  common_stereo.yaml  custom_object_detection.yaml  zed.yaml  zed2.yaml  zed2i.yaml  zedm.yaml  zedx.yaml  zedxhdr.yaml  zedxhdrmini.yaml  zedxm.yaml  zedxone4k.yaml  zedxonegs.yaml  zedxonehdr.yaml
zed_debug/launch/: zed_camera.launch.py  zed_camera_debug.launch.py
zed_debug/src/: zed_debug_proc.cpp  zed_stereo_single.cpp
zed_display_rviz2/: CMakeLists.txt  README.md  package.xml
zed_display_rviz2/launch/: display_zed_cam.launch.py
zed_display_rviz2/launch/obsolete/: display_zed.launch.py  display_zed2.launch.py  display_zed2i.launch.py  display_zedm.launch.py  display_zedx.launch.py  display_zedxm.launch.py
zed_display_rviz2/rviz2/: zed.rviz  zed2.rviz  zed2i.rviz  zedm.rviz  zedx.rviz  zedxm.rviz
zed_interfaces/: CMakeLists.txt  package.xml
zed_interfaces/msg/: BoundingBox2d.msg  BoundingBox3d.msg  Object.msg  ObjectStamped.msg  Skeleton.msg
zed_interfaces/srv/: ResetOdometry.srv  RestartTracking.srv  SetPose.srv  StartSvoRecording.srv  StopSvoRecording.srv
zed_ros2/: CMakeLists.txt  package.xml
zed_rviz/: CMakeLists.txt  README.md  package.xml
zed_rviz/launch/: display_zed.launch.py  display_zedm.launch.py
zed_rviz/rviz/: zed.rviz  zedm.rviz
zed_wrapper/: CMakeLists.txt  README.md  package.xml
zed_wrapper/config/: common.yaml  common_mono.yaml  common_stereo.yaml  custom_object_detection.yaml  ffmpeg.yaml  object_detection.yaml  stereo_side_cameras.yaml  virtual.yaml  zed.yaml  zed2.yaml  zed2i.yaml  zedm.yaml  zedx.yaml  zedxhdr.yaml  zedxhdrmax.yaml  zedxhdrmini.yaml  zedxm.yaml  zedxone4k.yaml  zedxonegs.yaml  zedxonehdr.yaml
zed_wrapper/config/rviz2/: zed2.rviz  zed2i.rviz  zed_camera.rviz  zedm.rviz  zedx.rviz  zedxm.rviz
zed_wrapper/launch/: orx_zedm_camera.launch.py  orx_zedm_camera_encoded.launch.py  orx_zedm_encoder_only.launch.py  zed.launch.py  zed2.launch.py  zed2i.launch.py  zed_camera.launch.py  zed_camera_eval.launch.py  zed_multi_camera.launch.py  zed_unmanaged.launch.py  zedm.launch.py  zedm_unmanaged.launch.py  zedx.launch.py  zedxm.launch.py
zed_wrapper/launch/include/: zed_camera.launch.py
zed_wrapper/launch/obsolete/: zed.launch.py  zed2.launch.py  zed2i.launch.py  zedm.launch.py  zedx.launch.py  zedxm.launch.py
zed_wrapper/params/: common.yaml  zed.yaml  zed2.yaml  zedm.yaml
zed_wrapper/src/: zed_wrapper.cpp  zed_wrapper_container.cpp
zed_wrapper/src/component/include/: visibility_control.h  zed_component.hpp  zed_it_broadcaster.hpp  zed_tf_broadcaster.hpp
zed_wrapper/src/component/src/: zed_component.cpp  zed_it_broadcaster.cpp  zed_tf_broadcaster.cpp
zed_wrapper/src/tools/include/: sl_tools.h
zed_wrapper/src/tools/src/: sl_tools.cpp
zed_wrapper/urdf/: zed.urdf  zed2.urdf  zed2i.urdf  zed_descr.urdf.xacro  zed_macro.urdf.xacro  zed_multi.urdf.xacro  zed_quad.urdf.xacro  zedm.urdf
zed_wrapper/urdf/include/: materials.urdf.xacro
(+12 files in other folders)
