<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>zed_interfaces</name>
	<version>4.0.0</version>
	<description>Contains message and service definitions used by the ZED ROS2 nodes.</description>
	<maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
	<license>Apache License 2.0</license>
	<url type="website">https://www.stereolabs.com/</url>
	<url type="repository">https://github.com/stereolabs/zed-ros2-wrapper</url>
	<url type="bugtracker">https://github.com/stereolabs/zed-ros2-wrapper/issues</url>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<build_depend>builtin_interfaces</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>shape_msgs</build_depend>
	<build_depend>rosidl_default_generators</build_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>shape_msgs</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_cmake_copyright</test_depend>
	<test_depend>ament_cmake_cppcheck</test_depend>
	<test_depend>ament_cmake_lint_cmake</test_depend>
	<test_depend>ament_cmake_pep257</test_depend>
	<test_depend>ament_cmake_uncrustify</test_depend>
	<test_depend>ament_cmake_xmllint</test_depend>
	<member_of_group>rosidl_interface_packages</member_of_group>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
